# opengl

./: .linear.toml  CMakeLists.txt  compile_commands.json
lib/: stb_image.cpp
lib/GLAD/: glad.c
lib/GLAD/glad/: glad.h
res/: fragment.frag  fragmentLight.frag  vertex.vs
src/: main.cpp
src/ENGINE/: Camera.cpp  Camera.hpp  Core.cpp  Core.hpp  ENGINE.hpp  Keyboard.cpp  Keyboard.hpp  Mesh.cpp  Mesh.hpp  Mouse.cpp  Mouse.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp
